--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
 	"name": "homelab",
 	"packageManager": "bun@1.2.2",
+	"scripts": {
+		"test": "mocha --require ts-node/register test/**/*.test.ts"
+	},
 	"devDependencies": {
+		"@types/mocha": "^10.0.10",
 		"@types/node": "^22.16.0",
+		"mocha": "^11.7.1",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@pulumi/command": "^1.1.0",
 		"@pulumi/docker": "^4.8.0",
 		"@pulumi/docker-build": "^0.0.12",
 		"@pulumi/kubernetes": "^4.23.0",
-		"@pulumi/pulumi": "^3.181.0",
+		"@pulumi/pulumi": "^3.184.0",
 		"@pulumi/random": "^4.18.2",
+		"@types/argon2": "^0.15.4",
+		"argon2": "^0.43.1",
 		"yaml": "^2.8.0"
 	}
 }
