--- a/stacks/ai-workspace/Pulumi.romulus.yaml
+++ b/stacks/ai-workspace/Pulumi.romulus.yaml
@@ -83,18 +83,15 @@ config:
   ai-workspace:firecrawl.resources.api.limits.memory: "512Mi"
   ai-workspace:firecrawl.resources.api.limits.cpu: "500m"
   # Resource configuration for Worker service
-  ai-workspace:firecrawl.resources.worker.requests.memory: "512Mi"
-  ai-workspace:firecrawl.resources.worker.requests.cpu: "250m"
-  ai-workspace:firecrawl.resources.worker.limits.memory: "1Gi"
+  ai-workspace:firecrawl.resources.worker.requests.memory: "2Gi"
+  ai-workspace:firecrawl.resources.worker.requests.cpu: "500m"
+  ai-workspace:firecrawl.resources.worker.limits.memory: "4Gi"
   ai-workspace:firecrawl.resources.worker.limits.cpu: "1000m"
   # Resource configuration for Playwright service
   ai-workspace:firecrawl.resources.playwright.requests.memory: "512Mi"
   ai-workspace:firecrawl.resources.playwright.requests.cpu: "250m"
   ai-workspace:firecrawl.resources.playwright.limits.memory: "2Gi"
   ai-workspace:firecrawl.resources.playwright.limits.cpu: "1000m"
-  # System limits
-  ai-workspace:firecrawl.systemLimits.maxCpu: "0.8"
-  ai-workspace:firecrawl.systemLimits.maxRam: "0.8"
   # Ingress configuration
   ai-workspace:firecrawl.ingress.enabled: "true"
   ai-workspace:firecrawl.ingress.className: "internal"
