add jina ai configuration in prep for librechat

--- a/stacks/ai-workspace/Pulumi.romulus.yaml
+++ b/stacks/ai-workspace/Pulumi.romulus.yaml
@@ -100,3 +100,7 @@ config:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   ai-workspace:firecrawl.ingress.tls.enabled: "true"
   ai-workspace:firecrawl.ingress.tls.secretName: "firecrawl-tls"
+  
+  # Jina AI Configuration
+  ai-workspace:jinaai.enabled: "true"
+  ai-workspace:jinaai.apiKeyEnvVar: "JINA_AI_API_KEY"
