--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@iarna/toml": "^2.2.5",
 		"@pulumi/cloudflare": "^6.4.1",
 		"@pulumi/command": "^1.1.0",
 		"@pulumi/docker": "^4.8.0",
