workaround stats and sessions db curruptions for aduard home

--- a/programs/dns/Pulumi.pantheon.yaml
+++ b/programs/dns/Pulumi.pantheon.yaml
@@ -3,6 +3,7 @@ config:
   dns:adguardHome:
     # AdGuard Home configuration
     adminUsername: rfhold
+    resetSessionsAndStatsDb: true
     # Service configuration
     service:
       type: LoadBalancer
