--- a/programs/nvr/Pulumi.yaml
+++ b/programs/nvr/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: nvr
 runtime: nodejs
-description: Network video recorder and streaming services
+description: Network video recorder and streaming services using Frigate NVR
