--- a/programs/ingress/Pulumi.pantheon.yaml
+++ b/programs/ingress/Pulumi.pantheon.yaml
@@ -18,10 +18,24 @@ config:
     ingressClass:
       name: "internal"
       isDefaultClass: true
+  # Gateway Configuration
+  ingress:gateway:
+    implementation: "kgateway"
+    kgateway:
+      gatewayCrds:
+        enabled: true
+        experimentalChannel: true
+      gatewayClass:
+        create: true
+        name: "kgateway"
+      aiGateway:
+        enabled: true
+      inferenceExtension:
+        enabled: true
   # IP Address Pools
   ingress:ipAddressPools:
     - name: "default-pool"
-      addresses: ["172.16.3.51-172.16.3.60"]
+      addresses: ["172.16.3.51-172.16.3.61"]
     - name: "dns-pool"
       addresses: ["172.16.3.8/32"]
   # L2 Advertisements
