wip: vllm inference
kgateway is nearing support for agent gateway to use the body based
router for us to have inference routing

--- a/programs/ai-workspace/Pulumi.romulus.yaml
+++ b/programs/ai-workspace/Pulumi.romulus.yaml
@@ -173,6 +173,13 @@ config:
   ai-workspace:librechat.enabled: "true"
   ai-workspace:librechat.domain: "librechat.holdenitdown.net"
   ai-workspace:librechat.replicas: "1"
+  # Example custom provider configuration
+  ai-workspace:librechat.customProviders:
+    - name: "qwen3-coder"
+      baseURL: "https://qwen3-coder.holdenitdown.net/v1/"
+      models:
+        - "Qwen/Qwen3-Coder-30B-A3B-Instruct-FP8"
+      titleModel: "Qwen/Qwen3-Coder-30B-A3B-Instruct-FP8"
   # Meilisearch resource configuration
   ai-workspace:librechat.resources.meilisearch.requests.memory: "512Mi"
   ai-workspace:librechat.resources.meilisearch.requests.cpu: "100m"
