--- a/programs/environment/Pulumi.dev.yaml
+++ b/programs/environment/Pulumi.dev.yaml
@@ -4,4 +4,5 @@ config:
     - "OPENROUTER_API_KEY"
     - "JINA_AI_API_KEY"
     - "ANTHROPIC_API_KEY"
+    - "HF_TOKEN"
 encryptionsalt: v1:Kqy79H+6Xx0=:v1:Ibz2n2ut2GLeUaNO:OEg1IFJt5PVr/UMIVf/tDQJ7snCAzg==
