--- a/programs/kokoro/Pulumi.pantheon.yaml
+++ b/programs/kokoro/Pulumi.pantheon.yaml
@@ -18,9 +18,9 @@ config:
         memory: "8Gi"
         cpu: "4000m"
     tolerations:
-      - key: "cuda"
+      - key: "workload-type"
         operator: "Equal"
-        value: "true"
+        value: "gpu-inference"
         effect: "NoSchedule"
     nodeSelector:
       rholden.dev/gpu: "cuda"
