--- a/programs/backup/Pulumi.pantheon.yaml
+++ b/programs/backup/Pulumi.pantheon.yaml
@@ -1,5 +1,7 @@
 encryptionsalt: v1:8gQIQ3zSY5Q=:v1:1iLYMwboXRhGRQSJ:j/MMa3G8zQG9H451Eiv3jDcEXBYpyQ==
 config:
+  kubernetes:clusterIdentifier: pantheon
+  kubernetes:context: pantheon
   backup:object-store-stack: romulus
   backup:object-store-name: default
   backup:bucket-name: etcd-snapshots
