--- a/programs/git/Pulumi.romulus.yaml
+++ b/programs/git/Pulumi.romulus.yaml
@@ -1,4 +1,6 @@
 encryptionsalt: v1:NRKA0OjcotA=:v1:u/SPkSlEA4WWYaG4:bct7vQqu+oCTe6ULJCxlyJSabCbRtA==
 config:
+  kubernetes:clusterIdentifier: romulus
+  kubernetes:context: romulus
   domain: git.holdenitdown.net
   ingress-class: internal
