--- a/programs/storage/Pulumi.romulus.yaml
+++ b/programs/storage/Pulumi.romulus.yaml
@@ -1,5 +1,7 @@
 encryptionsalt: v1:AvVJQOE0j30=:v1:QtZyZKD11I21ILe0:Ji94dA/KMpZGEWDKg/ALW2ZyutQlTg==
 config:
+  kubernetes:clusterIdentifier: romulus
+  kubernetes:context: romulus
   storage:cluster-name: romulus
   
   # Ceph Cluster Configuration
