--- a/.github/workflows/build-speaches-cuda.yml
+++ b/.github/workflows/build-speaches-cuda.yml
@@ -4,43 +4,43 @@ on:
   workflow_dispatch:
     inputs:
       speaches_version:
-        description: 'Speaches version'
+        description: "Speaches version"
         required: true
-        default: '0.8.3'
+        default: "0.8.3"
       cuda_version:
-        description: 'CUDA version'
+        description: "CUDA version"
         required: true
-        default: '12.6.3'
+        default: "12.6.3"
       ctranslate2_version:
-        description: 'CTranslate2 version'
+        description: "CTranslate2 version"
         required: true
-        default: '4.6.0'
+        default: "4.6.0"
 
 jobs:
   build:
-    runs-on: arm-builder
-    
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ gitea.actor }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Build and push ARM64 image
         uses: docker/build-push-action@v5
         with:
           context: ./docker/speaches
           platforms: linux/arm64
           push: true
-          tags: ghcr.io/${{ gitea.repository_owner }}/speaches:${{ inputs.speaches_version }}-cuda-${{ inputs.cuda_version }}
+          tags: ghcr.io/${{ github.repository_owner }}/speaches:${{ inputs.speaches_version }}-cuda-${{ inputs.cuda_version }}
           build-args: |
             SPEACHES_VERSION=${{ inputs.speaches_version }}
             CUDA_VERSION=${{ inputs.cuda_version }}
