--- a/docker/smartctl-exporter/Dockerfile
+++ b/docker/smartctl-exporter/Dockerfile
@@ -1,27 +1,34 @@
-ARG ARCH
+ARG TARGETARCH
 ARG OS="linux"
 ARG VERSION="0.14.0"
 
 FROM alpine:3 as downloader
-ARG ARCH
+ARG TARGETARCH
 ARG OS
 ARG VERSION
 
 RUN apk add --no-cache curl tar
 
 WORKDIR /tmp
-RUN curl -sL https://github.com/prometheus-community/smartctl_exporter/releases/download/v${VERSION}/smartctl_exporter-${VERSION}.${OS}-${ARCH}.tar.gz | tar xz
+RUN if [ "${TARGETARCH}" = "amd64" ]; then \
+      ARCH="amd64"; \
+    elif [ "${TARGETARCH}" = "arm64" ]; then \
+      ARCH="arm64"; \
+    else \
+      ARCH="${TARGETARCH}"; \
+    fi && \
+    curl -sL https://github.com/prometheus-community/smartctl_exporter/releases/download/v${VERSION}/smartctl_exporter-${VERSION}.${OS}-${ARCH}.tar.gz | tar xz
 
 FROM alpine:3
 LABEL maintainer="Homelab"
 
 RUN apk add --no-cache smartmontools
 
-ARG ARCH
+ARG TARGETARCH
 ARG OS
 ARG VERSION
 
-COPY --from=downloader /tmp/smartctl_exporter-${VERSION}.${OS}-${ARCH}/smartctl_exporter /bin/smartctl_exporter
+COPY --from=downloader /tmp/smartctl_exporter-${VERSION}.${OS}-${TARGETARCH}/smartctl_exporter /bin/smartctl_exporter
 
 EXPOSE 9633
 USER nobody
