--- a/.github/workflows/build-smartctl-exporter.yml
+++ b/.github/workflows/build-smartctl-exporter.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'smartctl_exporter version'
+        description: "smartctl_exporter version"
         required: true
-        default: '0.14.0'
+        default: "0.14.0"
 
 permissions:
   contents: read
@@ -15,30 +15,29 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Build and push multi-arch image
         uses: docker/build-push-action@v5
         with:
           context: ./docker/smartctl-exporter
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/smartctl-exporter:v${{ inputs.version }}
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/smartctl-exporter:v${{ inputs.version }}
+            ghcr.io/${{ github.repository_owner }}/smartctl-exporter:v${{ inputs.version }}-${{ github.run_number }}
           build-args: |
             VERSION=${{ inputs.version }}
