--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"typecheck": "bun tsc --noEmit"
 	},
 	"devDependencies": {
+		"@opencode-ai/plugin": "^0.15.29",
 		"@types/mocha": "^10.0.10",
 		"@types/node": "^22.16.0",
 		"mocha": "^11.7.1",
