--- a/programs/gitea-actions/Pulumi.arm-builder.yaml
+++ b/programs/gitea-actions/Pulumi.arm-builder.yaml
@@ -6,7 +6,7 @@ config:
     url: https://git.holdenitdown.net
   gitea-actions:runner:
     name: arm-builder
-    labels: "arm-builder:docker://catthehacker/ubuntu:act-latest"
+    labels: "arm-builder:docker://catthehacker/ubuntu:act-24.04-20251029"
     replicas: 1
   gitea-actions:node:
     selector:
