--- a/.gitea/workflows/build-firecrawl.yml
+++ b/.gitea/workflows/build-firecrawl.yml
@@ -10,7 +10,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-${{ matrix.arch }}
+    strategy:
+      matrix:
+        arch: [arm64, amd64]
 
     steps:
       - name: Clone Firecrawl repository
@@ -29,11 +32,29 @@ jobs:
           username: ${{ gitea.actor }}
           password: ${{ secrets.REGISTRY_TOKEN }}
 
-      - name: Build and push multi-arch image
+      - name: Build and push ${{ matrix.arch }} image
         uses: https://github.com/docker/build-push-action@v5
         with:
           context: ./firecrawl/apps/api
           file: ./firecrawl/apps/api/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/${{ matrix.arch }}
           push: true
-          tags: git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl:${{ inputs.firecrawl_version }}
+          tags: git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl:${{ inputs.firecrawl_version }}-${{ matrix.arch }}
+
+  create-manifest:
+    needs: build
+    runs-on: ubuntu-latest-amd64
+
+    steps:
+      - name: Log in to Gitea Container Registry
+        uses: https://github.com/docker/login-action@v3
+        with:
+          registry: git.holdenitdown.net
+          username: ${{ gitea.actor }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+
+      - name: Create and push manifest
+        run: |
+          docker buildx imagetools create -t git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl:${{ inputs.firecrawl_version }} \
+            git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl:${{ inputs.firecrawl_version }}-arm64 \
+            git.holdenitdown.net/${{ gitea.repository_owner }}/firecrawl:${{ inputs.firecrawl_version }}-amd64
