multi arch test runner

--- a/.gitea/workflows/test-agent-executor.yml
+++ b/.gitea/workflows/test-agent-executor.yml
@@ -10,7 +10,10 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-${{ matrix.arch }}
+    strategy:
+      matrix:
+        arch: [arm64, amd64]
 
     steps:
       - name: Generate random string
