--- a/docker/vllm-rocm/Dockerfile
+++ b/docker/vllm-rocm/Dockerfile
@@ -48,7 +48,7 @@ RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${PYTH
     python3 -m pip install --upgrade pip setuptools wheel
 
 RUN pip3 install --no-cache-dir \
-    torch==2.6.0 \
+    torch==2.9.0+rocm6.4 \
     torchvision \
     torchaudio \
     --index-url https://download.pytorch.org/whl/rocm6.4
