--- a/.gitea/workflows/build-vllm-rocm.yml
+++ b/.gitea/workflows/build-vllm-rocm.yml
@@ -48,3 +48,5 @@ jobs:
           tags: |
             git.holdenitdown.net/${{ gitea.repository_owner }}/vllm:gfx1151
             git.holdenitdown.net/${{ gitea.repository_owner }}/vllm:gfx1151-rocm${{ inputs.rocm_version }}
+          cache-from: type=registry,ref=git.holdenitdown.net/${{ gitea.repository_owner }}/vllm:buildcache-gfx1151
+          cache-to: type=registry,ref=git.holdenitdown.net/${{ gitea.repository_owner }}/vllm:buildcache-gfx1151,mode=max
